--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=84
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=293
-dock_hsplit_3=-285
+dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/explosion.tscn", "res://scenes/world.tscn", "res://scenes/enemy.tscn", "res://scenes/player_projectile.tscn", "res://scenes/bomber_ufo.tscn", "res://scenes/player.tscn", "res://scenes/power_up/double_laser_shooter_power_up.tscn", "res://scenes/power_up.tscn", "res://scenes/double_laser_shooter.tscn", "res://scenes/power_up/health_power_up.tscn", "res://scenes/power_up/invincible_power_up.tscn", "res://scenes/power_up/power_up_spawner.tscn", "res://scenes/bomb.tscn", "res://scenes/shooter_enemy.tscn", "res://scenes/basic_enemy.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/explosion.tscn", "res://scenes/world.tscn", "res://scenes/enemy.tscn", "res://scenes/player_projectile.tscn", "res://scenes/bomber_ufo.tscn", "res://scenes/player.tscn", "res://scenes/power_up/double_laser_shooter_power_up.tscn", "res://scenes/power_up.tscn", "res://scenes/double_laser_shooter.tscn", "res://scenes/power_up/health_power_up.tscn", "res://scenes/power_up/invincible_power_up.tscn", "res://scenes/power_up/power_up_spawner.tscn", "res://scenes/bomb.tscn", "res://scenes/shooter_enemy.tscn", "res://scenes/basic_enemy.tscn", "res://scenes/enemy_projectile.tscn")
+current_scene="res://scenes/world.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/actor.gd", "res://scripts/BasicEnemyMovementComponent.gd", "res://scripts/basic_enemy.gd", "res://scripts/basic_enemy_animated_sprite.gd", "res://scripts/Bomb.gd", "res://scripts/BomberUFOMovementComponent.gd", "res://scripts/bomber_ufo.gd", "res://scripts/BombMovementComponent.gd", "res://scripts/damage_system.gd", "res://scripts/power_up/DoubleLaserShooterPowerUp.gd", "res://scripts/enemy.gd", "res://scripts/EnemyProjectileMovementComponent.gd", "res://scripts/Explosion.gd", "res://scripts/FlashEffect.gd", "res://scripts/power_up/HealthPowerUp.gd", "res://scripts/power_up/invincible_power_up.gd", "res://scripts/LimitedSpawner.gd", "res://scripts/MovementComponent.gd", "res://scripts/ParallaxBackground.gd", "res://scripts/player.gd", "res://scripts/PlayerMovementComponent.gd", "res://scripts/PlayerProjectileMovementComponent.gd", "res://scripts/player_projectile.gd", "res://scripts/PowerUP.gd", "res://scripts/power_up/PowerUpSpawner.gd", "res://scripts/projectile.gd", "res://scripts/ProjectileMovementComponent.gd", "res://scripts/shooter_enemy.gd", "res://scripts/Spawner.gd", "res://scripts/ui/stats.gd"]
-selected_script="res://scripts/player.gd"
+selected_script=""
 open_help=["@GlobalScope", "AnimatedSprite2D", "CanvasItem", "Image", "InputEvent", "Material", "Node", "Object", "PackedStringArray", "ShaderMaterial", "Sprite2D", "SpriteFrames", "StringName", "Vector2"]
 script_split_offset=52
 list_split_offset=0
