touch input fixed

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -40,4 +40,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/states/StateMachine.gd"
+}, {
+"base": &"Control",
+"class": &"VirtualJoystick",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/virtual_joystick/virtual_joystick.gd"
 }])
