--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 0.0,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 7.0,
+"scroll_position": 13.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 21,
@@ -67,11 +67,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 15,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -84,9 +84,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": false,
+"row": 2,
+"scroll_position": 17.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 2,
+"selection_to_column": 41,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -127,16 +131,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 2,
-"selection_to_column": 38,
-"selection_to_line": 2,
+"row": 10,
+"scroll_position": 1.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -202,9 +202,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 6.0,
-"selection": false,
+"row": 15,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 15,
+"selection_to_column": 13,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
 
@@ -542,6 +546,66 @@ state={
 "h_scroll_position": 0,
 "row": 6,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/powerful_player_projectile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 2.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/TouchScreenMovement.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://README.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 78,
+"scroll_position": 70.0,
+"selection": true,
+"selection_from_column": 33,
+"selection_from_line": 6,
+"selection_to_column": 18,
+"selection_to_line": 78,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://addons/virtual_joystick/virtual_joystick.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 79,
+"scroll_position": 70.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
