--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=206
+dock_split_2=-74
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=236
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/pause_hover.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/fonts/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/states/", "res://scenes/", "res://scenes/power_up/", "res://assets/", "res://assets/explosion/3/frames/", "res://assets/explosion/2/frames/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
